--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: CS 498GD Game Development
+title: CS 415 Game Development
 description: >- # this means to ignore newlines until "baseurl:"
-  © University of Illinois, 2021
+  © University of Illinois, 2022
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "https://courses.engr.illinois.edu/cs418" # the base hostname & protocol for your site, e.g. http://example.com
 #url: "https://courses.engr.illinois.edu/cs418" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  shaffer1
-issues: https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/issues/new
+issues: https://github.com/illinois-cs415/illinois-cs415.github.io/issues/new
 # Build settings
 markdown: kramdown
 theme: minima
