--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -14,8 +14,7 @@
 Anatomy of a Project [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/TeachYourselfUE4_Hour_02_Lecture1_AnatomyOfAProject.pdf)<br/>
               Intro to Blueprints [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/UE_Blueprints_Lecture01.pdf)<br/>
               Basic Blueprint Programming [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/UE_Blueprints_Lecture02.pdf) <br/><br/>
-              **MP1 Assigned Due Feb 13** [**Link**](https://illinois-cs498gd.github.io/assignments/mp1.html) <br/><br/>
-              **Quiz 1 Assigned Due Feb 1** [**Link**](https://www.prairielearn.org/pl/course_instance/129045/assessment/2316397)"
+              **MP1 Assigned Due Sep 9** [**Link**](https://illinois-cs498gd.github.io/assignments/mp1.html)"
   title: "Unreal Engine Basics"
 -
   date: "Week 2: Sep 2"
