--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,25 +1,19 @@
 - 
   date: "Week 1: Aug  24"
-  materials: "Introduction to Unreal Engine [Video](https://classtranscribe.illinois.edu/video?id=45d08962-c87b-4fe5-a485-3e2eb681af25&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture02.pdf)"
+  materials: "Introduction to Unreal Engine [Video](https://classtranscribe.illinois.edu/video?id=45d08962-c87b-4fe5-a485-3e2eb681af25&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture02.pdf) <br/>
+  Simple Game Example [Video](https://classtranscribe.illinois.edu/video?id=fee44b99-1afb-4502-a4da-3fa9109dcd64&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/UE_Blueprints_Lecture05.pdf) <br/><br/>
+  [Tutorial Your First Hour in Unreal Engine 4](https://www.unrealengine.com/en-US/onlinelearning-courses/your-first-hour-in-unreal-engine-4)"
   title: "Game Engine Concepts"
 - 
   date: "Week 1: Aug 26"
-  materials: "Game Design [Video](https://classtranscribe.illinois.edu/video?id=941c62a5-aba3-493b-aa4a-2b43c07d33b3&from=sharedlink)
-                          &nbsp;[PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture01.pdf)<br/><br/>
-                          Tutorial [Your First Hour in Unreal Engine 4](https://www.unrealengine.com/en-US/onlinelearning-courses/your-first-hour-in-unreal-engine-4)"
+  materials: "Live Lecture [Zoom Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)"
   title: "Course Mechanics"
 - 
   date: "Week 2: Aug 31"
-  materials: "[Video](https://classtranscribe.illinois.edu/video?id=d55b335d-af6a-4d6f-a071-aa4500f0ffe4&begin=843&from=sharedlink) <br/><br/>
-Anatomy of a Project [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/TeachYourselfUE4_Hour_02_Lecture1_AnatomyOfAProject.pdf)<br/>
-              Intro to Blueprints [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/UE_Blueprints_Lecture01.pdf)<br/>
-              Basic Blueprint Programming [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/UE_Blueprints_Lecture02.pdf) <br/><br/>
-              **MP1 Assigned Due Sep 9** [**Link**](https://illinois-cs498gd.github.io/assignments/mp1.html)"
   title: "Unreal Engine Basics"
 -
   date: "Week 2: Sep 2"
-  materials: " Simple Game Example [Video](https://classtranscribe.illinois.edu/video?id=fee44b99-1afb-4502-a4da-3fa9109dcd64&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/UE_Blueprints_Lecture05.pdf)"
-  title: "An Example Game"
+  title: "Unreal Engine Basics"
 -
   date: "Week 3: Sep 7"
   title: "Unreal Engine Basics"
