--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -2,7 +2,7 @@
   date: "Week 1: Aug  24"
   materials: "Introduction to Unreal Engine [Video](https://classtranscribe.illinois.edu/video?id=45d08962-c87b-4fe5-a485-3e2eb681af25&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture02.pdf) <br/>
   Simple Game Example [Video](https://classtranscribe.illinois.edu/video?id=fee44b99-1afb-4502-a4da-3fa9109dcd64&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/UE_Blueprints_Lecture05.pdf) <br/><br/>
-  [Tutorial Your First Hour in Unreal Engine 4](https://www.unrealengine.com/en-US/onlinelearning-courses/your-first-hour-in-unreal-engine-4)"
+  [UE 4 Tutorial](https://www.raywenderlich.com/454-how-to-create-a-simple-game-in-unreal-engine-4)"
   title: "Game Engine Concepts"
 - 
   date: "Week 1: Aug 26"
