--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -6,7 +6,7 @@
   title: "Game Engine Concepts"
 - 
   date: "Week 1: Aug 26"
-  materials: "Live Lecture [Zoom Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<\br>
+  materials: "Live Lecture [Zoom Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/>
               Game Genres [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GameGenres.pdf)"
   title: "Course Mechanics and Introduction"
 - 
