--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -6,14 +6,14 @@
   title: "Game Engine Concepts"
 - 
   date: "Week 1: Aug 26"
-  materials: "Live Lecture [Zoom Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)<br/>
-              Game Genres [Video](https://classtranscribe.illinois.edu/video?id=c66d9b06-5db8-4561-8f11-30dc36b56f6a&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GameGenres.pdf)"
+  materials: "Game Genres [Video](https://classtranscribe.illinois.edu/video?id=c66d9b06-5db8-4561-8f11-30dc36b56f6a&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GameGenres.pdf)"
   title: "Course Mechanics and Introduction"
 - 
   date: "Week 2: Aug 31"
   title: "Unreal Engine Basics"
 -
   date: "Week 2: Sep 2"
+  materials: "Live Lecture [Zoom Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09)"
   title: "Unreal Engine Basics"
 -
   date: "Week 3: Sep 7"
