--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -10,6 +10,8 @@
   title: "Course Mechanics and Introduction"
 - 
   date: "Week 2: Aug 31"
+  materials: "UI Design [Video](https://classtranscribe.illinois.edu/video?id=6dff5650-87ad-454b-992c-54b2a749d097&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture09.pdf) <br/>
+  Level Design [Video](https://classtranscribe.illinois.edu/video?id=5f1b3eb3-dc1a-4c8c-9db4-72093c37138c&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture04.pdf)"
   title: "Unreal Engine Basics"
 -
   date: "Week 2: Sep 2"
