--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -15,35 +15,36 @@
   title: "Unreal Engine Basics"
 -
   date: "Week 2: Sep 2"
-  materials: "Live Lecture [Zoom Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09) <br/>
+  materials: "Live Lecture [Video]() <br/>
               Game Design Overview [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture01.pdf) <br/>
-              UE5 Overview [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf) <br/>
-              Geometric Models: Theory and Practice [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf)"
+              UE5 Overview [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf)"
   title: "Unreal Engine Basics"
 -
   date: "Week 3: Sep 7"
-  title: "Unreal Engine Basics"
+  materials:""
+  title: "Basic Geometric Modeling"
 -
   date: "Week 3: Sep 9"
-  title: "Unreal Engine Basics"
+  materials:"Geometric Models: Theory and Practice [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf)"
+  title: "Basic Geometric Modeling"
 -  
   date: "Week 4: Sep 14"
-  title: "Basic Geometric Modeling"
+  title: "Graphics: Rasterization"
 -  
   date: "Week 4: Sep 16"
-  title: "Basic Geometric Modeling"
+  title: "Graphics: Shading"
 -
   date: "Week 5: Sep 21"
-  title: "Graphics: Rasterization "
+  title: "Game Design"
 -
   date: "Week 5: Sep 23"
-  title: "Graphics: Shading"
+  title: "Game Design"
 - 
   date: "Week 6: Sep 28"
-  title: "Game Design"
+  title: "UE Material Models"
 -
   date: "Week 6: Sep 30"
-  title: "Game Design"
+  title: "UE5: Nanite"
 - 
   date: "Week 7: Oct 5"
   title: "Virtual Reality" 
