--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -15,7 +15,7 @@
   title: "Unreal Engine Basics"
 -
   date: "Week 2: Sep 2"
-  materials: "Live Lecture [Video]() <br/>
+  materials: "Live Lecture [Video](https://classtranscribe.illinois.edu/video?id=2264c5ea-e1fc-48a3-af22-40ac843da272&from=sharedlink) <br/>
               Game Design Overview [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture01.pdf) <br/>
               UE5 Overview [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf)"
   title: "Unreal Engine Basics"
