--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -29,8 +29,8 @@
 -
   date: "Week 3: Sep 9"
   materials: "Live Video [Zoom Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09) <br/><br/>
-  Geometric Modeling: Creating Assets and Art [PDF]() <br/>
-  Geometric Models: Meshes: Theory and Practice [PDF]()"
+  Geometric Modeling: Creating Art [PDF]() <br/>
+  Geometric Models: Meshes [PDF]()"
   title: "Basic Geometric Modeling"
 -  
   date: "Week 4: Sep 14"
