--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -31,7 +31,7 @@
   materials: "Live Video [Zoom Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09) <br/><br/>
   Geometric Modeling: Creating Art [PDF]() <br/>
   Geometric Models: Meshes [PDF]() <br/>
-  **PrairieLearn HW 1 Due 9/23** [Link](https://www.prairielearn.org/pl/course_instance/129412/assessment/2322273)"
+  PrairieLearn HW 1 **Due 9/23** [Link](https://www.prairielearn.org/pl/course_instance/129412/assessment/2322273)"
   title: "Basic Geometric Modeling"
 -  
   date: "Week 4: Sep 14"
