--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -28,7 +28,7 @@
   title: "Basic Geometric Modeling"
 -
   date: "Week 3: Sep 9"
-  materials: "Live Video [Zoom Link](https://illinois.zoom.us/j/85907068559?pwd=VWh1bEVkNzhkdWtmOEJjT2lNalRGUT09) <br/><br/>
+  materials: "Live Lecture [Video](https://classtranscribe.illinois.edu/video?id=c85bc7fb-650e-4b69-8d20-ccbb9acc67fb&from=sharedlink) <br/><br/>
   Geometric Modeling: Game Art [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-ArtOverview.pdf) <br/>
   Geometric Models: Meshes [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf) <br/>
   PrairieLearn HW 1 **Due 9/23** [Link](https://www.prairielearn.org/pl/course_instance/129412/assessment/2322273)"
