--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -38,7 +38,7 @@
   materials:  "Geometric Models: Level-of-Detail Rendering [Video](https://classtranscribe.illinois.edu/video?id=9b359257-a3cd-4d97-8634-edad289ee7ce&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshLOD.pdf) <br/>
               Geometric Models: Mesh Simplification [Video](https://classtranscribe.illinois.edu/video?id=eb69792d-2f24-419e-b5d4-82fe36ed7039&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshLODQEM.pdf)<br/>
               Optional Reading: Mesh Data Structures [PDF]() <br/>
-              Optional Reading:  Original Mesh Simplification Paper [PDF]()"
+              Optional Reading:  Original Mesh Simplification Paper [PDF](http://www.cs.cmu.edu/~garland/Papers/quadrics.pdf)"
   title: "LOD Generation"
 -  
   date: "Week 4: Sep 16"
