--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -111,4 +111,4 @@
   title: "GDC Talk: Real-Time Path Tracing"
 -
   date: "Week 15: Dec 2"
-  title: "Game Industry: Guest Speaker"
+  title: "Guest Speaker: Diana Huang Software Engineer at [Rec Room](https://recroom.com/)"
