--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -56,7 +56,7 @@
   title: "Graphics: Rendering Basics"
 -
   date: "Week 5: Sep 23"
-  materials: "Triangle Rasterization [PDF]() <br/>
+  materials: "UE5 Nanite Rasterization [PDF]() <br/>
              Basic Shading [PDF]() <br/>
              Deferred Shading [PDF]() <br/><br/>
              PrairieLearn HW 2 Available 9/23 **Due 10/7** [Link](https://www.prairielearn.org/pl/course_instance/129412/assessment/2322608) 
